Add custom tool management and modal interface in popup. Enhance popup styles with tooltips and custom tool sections, and implement local storage for saving custom tools.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -3,6 +3,9 @@
   "name": "List Tools",
   "version": "0.1.0",
   "description": "Compute H3 index from latitude/longitude and resolution.",
+  "permissions": [
+    "tabs"
+  ],
   "action": {
     "default_title": "List Tools"
   },
